<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".fragments.SettingsFragment"
    android:id="@+id/settings_fragment">

    <TextView
        android:id="@+id/delayEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:hint="@string/choose_delay"
        android:textColor="@color/colorDetail"
        android:textColorHint="@color/colorDetail"
        android:textSize="18sp"
        android:textStyle="italic"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/durationEditText"
        app:layout_constraintStart_toEndOf="@+id/indicator1"
        app:layout_constraintVertical_chainStyle="packed"/>

    <View
        android:id="@+id/indicator1"
        android:layout_width="7dp"
        android:layout_height="0dp"
        android:layout_margin="10dp"
        android:background="@drawable/indicator"
        app:layout_constraintTop_toTopOf="@id/delayEditText"
        app:layout_constraintBottom_toBottomOf="@id/delayEditText"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/durationEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:hint="@string/choose_duration"
        android:textColor="@color/colorDetail"
        android:textColorHint="@color/colorDetail"
        android:textSize="18sp"
        android:textStyle="italic"
        app:layout_constraintTop_toBottomOf="@+id/delayEditText"
        app:layout_constraintBottom_toTopOf="@id/chooseAlarmSoundText"
        app:layout_constraintStart_toEndOf="@+id/indicator2"
        app:layout_constraintVertical_chainStyle="packed"/>

    <View
        android:id="@+id/indicator2"
        android:layout_width="7dp"
        android:layout_height="0dp"
        android:layout_margin="10dp"
        android:background="@drawable/indicator"
        app:layout_constraintTop_toTopOf="@id/durationEditText"
        app:layout_constraintBottom_toBottomOf="@id/durationEditText"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/chooseAlarmSoundText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:hint="@string/choose_alarm_sound"
        android:textColor="@color/colorDetail"
        android:textColorHint="@color/colorDetail"
        android:textSize="18sp"
        android:textStyle="italic"
        app:layout_constraintTop_toBottomOf="@+id/durationEditText"
        app:layout_constraintBottom_toTopOf="@id/choosePhoneNumber"
        app:layout_constraintStart_toEndOf="@+id/indicator3"
        app:layout_constraintVertical_chainStyle="packed"/>

    <View
        android:id="@+id/indicator3"
        android:layout_width="7dp"
        android:layout_height="0dp"
        android:layout_margin="10dp"
        android:background="@drawable/indicator"
        app:layout_constraintTop_toTopOf="@id/chooseAlarmSoundText"
        app:layout_constraintBottom_toBottomOf="@id/chooseAlarmSoundText"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/choosePhoneNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:hint="@string/choose_phone_number"
        android:textColor="@color/colorDetail"
        android:textColorHint="@color/colorDetail"
        android:textSize="18sp"
        android:textStyle="italic"
        app:layout_constraintTop_toBottomOf="@+id/chooseAlarmSoundText"
        app:layout_constraintBottom_toTopOf="@+id/takingPictures"
        app:layout_constraintStart_toEndOf="@+id/indicator4"
        app:layout_constraintVertical_chainStyle="packed"
        android:inputType="phone"/>

    <View
        android:id="@+id/indicator4"
        android:layout_width="7dp"
        android:layout_height="0dp"
        android:layout_margin="10dp"
        android:background="@drawable/indicator"
        app:layout_constraintTop_toTopOf="@id/choosePhoneNumber"
        app:layout_constraintBottom_toBottomOf="@id/choosePhoneNumber"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/phoneNumberSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/choosePhoneNumber"
        app:layout_constraintBottom_toBottomOf="@id/choosePhoneNumber"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/takingPictures"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:hint="@string/taking_pictures"
        android:textColorHint="@color/colorDetail"
        android:textSize="18sp"
        android:textStyle="italic"
        app:layout_constraintTop_toBottomOf="@+id/choosePhoneNumber"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@id/choosePhoneNumber"
        app:layout_constraintVertical_chainStyle="packed"/>

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/takingPicturesSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/takingPictures"
        app:layout_constraintBottom_toBottomOf="@id/takingPictures"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>