<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/mLayout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"

    tools:context=".activities.MainActivity">

    <!--    history section-->
    <!--    <TextView-->
    <!--        android:id="@+id/historyText"-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:layout_marginTop="16dp"-->
    <!--        android:text="@string/history"-->
    <!--        android:textColor="@color/colorDetail"-->
    <!--        android:textSize="20sp"-->
    <!--        app:layout_constraintEnd_toStartOf="@+id/ic_history"-->
    <!--        app:layout_constraintHorizontal_bias="0.5"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintTop_toTopOf="parent"-->
    <!--        android:singleLine="true"-->
    <!--        android:ellipsize="marquee"-->
    <!--        android:marqueeRepeatLimit="marquee_forever"-->
    <!--        android:scrollHorizontally="true"/>-->

    <!--    settings section-->

    <!--    <TextView-->
    <!--        android:id="@+id/settingsText"-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:layout_marginTop="16dp"-->
    <!--        android:text="@string/settings"-->
    <!--        android:textColor="@color/colorDetail"-->
    <!--        android:textSize="20sp"-->
    <!--        app:layout_constraintEnd_toStartOf="@+id/ic_settings"-->
    <!--        app:layout_constraintHorizontal_bias="0.5"-->
    <!--        app:layout_constraintStart_toEndOf="@+id/ic_history"-->
    <!--        app:layout_constraintTop_toTopOf="parent"-->
    <!--        android:singleLine="true"-->
    <!--        android:ellipsize="marquee"-->
    <!--        android:marqueeRepeatLimit="marquee_forever"-->
    <!--        android:scrollHorizontally="true" />-->

    <!--    fragment section-->

    <TextView
        android:id="@+id/languageChoiceText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="11dp"
        android:layout_marginEnd="10dp"
        android:ellipsize="marquee"
        android:marqueeRepeatLimit="marquee_forever"
        android:scrollHorizontally="true"
        android:singleLine="true"
        android:text="@string/language"
        android:textColor="@color/colorDetail"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/ic_language"
        app:layout_constraintHorizontal_bias="1"
        app:layout_constraintStart_toEndOf="@+id/ic_settings"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/ic_language"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="15dp"
        android:background="@color/colorPrimary"
        android:src="@drawable/ic_language"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/ic_history"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="4dp"
        android:background="@color/colorPrimary"
        android:src="@drawable/ic_history"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/ic_settings"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="4dp"
        android:background="@color/colorPrimary"
        android:src="@drawable/ic_settings"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <FrameLayout
        android:id="@+id/frameLayoutFragment"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        app:layout_constraintBottom_toTopOf="@+id/startMonitoringText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ic_settings" />

    <TextView
        android:id="@+id/startMonitoringText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="540dp"
        android:ellipsize="marquee"
        android:marqueeRepeatLimit="marquee_forever"
        android:padding="10dp"
        android:scrollHorizontally="true"
        android:singleLine="true"
        android:text="@string/start_monitoring"
        android:textAlignment="center"
        android:textColor="@color/colorDetail"
        android:textSize="30sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toTopOf="@+id/ic_cameraMonitoring"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <!--
        android:shadowColor="@color/colorAccent"
        android:shadowDx="10"
        android:shadowDy="10"
        android:shadowRadius="1"
        -->


    <ImageButton
        android:id="@+id/ic_cameraMonitoring"
        android:layout_width="155dp"
        android:layout_height="155dp"
        android:layout_marginStart="80dp"
        android:layout_marginEnd="81dp"
        android:layout_marginBottom="100dp"
        android:background="@color/colorPrimary"
        android:src="@drawable/ic_camera_monitoring"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/startMonitoringText" />

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="5dp"
        app:adSize="LARGE_BANNER"
        app:adUnitId="ca-app-pub-3940256099942544/6300978111"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ic_cameraMonitoring">
    </com.google.android.gms.ads.AdView>


</androidx.constraintlayout.widget.ConstraintLayout>