<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/colorPrimary"
    tools:context=".fragments.HistoryFragment"
    android:orientation="vertical"
    android:id="@+id/history_fragment">

    <Button
        android:id="@+id/deleteAllBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Delete All"
        android:textStyle="bold"
        android:textColor="@color/colorPrimary"/>

    <ListView
        android:id="@+id/listViewHistory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>



</LinearLayout>